feat: extended image support
